add fusion example based on rrf.

--- a/time_fuse.ipynb
+++ b/time_fuse.ipynb
@@ -6,13 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install python-terrier\n",
-    "!pip install repro-eval"
+    "%pip install python-terrier\n",
+    "%pip install repro-eval\n",
+    "%pip install ranx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -24,13 +25,13 @@
       "PyTerrier 0.10.1 has loaded Terrier 5.9 (built by craigm on 2024-05-02 17:40) and terrier-helper 0.0.8\n",
       "\n",
       "No etc/terrier.properties, using terrier.default.properties for bootstrap configuration.\n",
-      "/var/folders/tb/5vs85b2520s950r538g7zznr0000gn/T/ipykernel_9112/4119560510.py:12: SettingWithCopyWarning: \n",
+      "/var/folders/tb/5vs85b2520s950r538g7zznr0000gn/T/ipykernel_18784/4119560510.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  bm25_t4_strip['queryid']= bm25_t4_strip['queryid_t5']\n",
-      "/var/folders/tb/5vs85b2520s950r538g7zznr0000gn/T/ipykernel_9112/4119560510.py:13: SettingWithCopyWarning: \n",
+      "/var/folders/tb/5vs85b2520s950r538g7zznr0000gn/T/ipykernel_18784/4119560510.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -62,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 216218/216218 [00:02<00:00, 103737.55it/s]\n"
+      "100%|██████████| 216218/216218 [00:02<00:00, 103813.55it/s]\n"
      ]
     },
     {
@@ -108,6 +109,47 @@
     "pt.io.write_results(bm25_t5_reranked_by_t4, 'bm25_t5_reranked_by_t4', format='trec',run_name='bm25_t5_reranked_by_t4')\n",
     "pt.io.write_results(bm25_t5, 'bm25_t5', format='trec',run_name='bm25_t5')\n",
     "rpd_eval = RpdEvaluator(run_b_orig_path='bm25_t5', run_b_rep_path='bm25_t5_reranked_by_t4')\n",
+    "correlations = rpd_eval.ktau_union().get('baseline')\n",
+    "correlation_scores = [x for x in list(correlations.values()) if ~np.isnan(x)]\n",
+    "print(\"Avg. Kendall's tau: \", sum(correlation_scores) / len(correlation_scores))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avg. Kendall's tau:  0.004377672896374601\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from repro_eval.Evaluator import RpdEvaluator\n",
+    "from ranx import Run, fuse\n",
+    "\n",
+    "def filter_and_fuse(run_recent, old_runs: list):\n",
+    "    qid_ranking_groups = run_recent.groupby('qid')\n",
+    "    qid_ranking_dict_recent = {qid: pd.Series(ranking['score'].values, ranking['docno']).to_dict() for qid, ranking in qid_ranking_groups}\n",
+    "    runs = [Run.from_dict(qid_ranking_dict_recent)]\n",
+    "    for run_old in old_runs:\n",
+    "        qid_ranking_groups = run_old.groupby('qid')\n",
+    "        qid_ranking_dict_old = {qid: pd.Series(ranking['score'].values, ranking['docno']).to_dict() for qid, ranking in qid_ranking_groups}\n",
+    "        for qid, ranking in qid_ranking_dict_old.items():\n",
+    "            docs_recent = qid_ranking_dict_recent.get(qid).keys()\n",
+    "            qid_ranking_dict_old[qid] = {docid: score for docid, score in ranking.items() if docid in docs_recent}\n",
+    "        runs.append(Run.from_dict(qid_ranking_dict_old))\n",
+    "    combined_run = fuse(runs = runs, method = \"rrf\")\n",
+    "\n",
+    "    return combined_run\n",
+    "\n",
+    "run = filter_and_fuse(bm25_t5, [bm25_t4_strip])\n",
+    "run.save('bm25_t5_rrf_t4', kind='trec')\n",
+    "rpd_eval = RpdEvaluator(run_b_orig_path='bm25_t5', run_b_rep_path='bm25_t5_rrf_t4')\n",
     "correlations = rpd_eval.ktau_union().get('baseline')\n",
     "correlation_scores = [x for x in list(correlations.values()) if ~np.isnan(x)]\n",
     "print(\"Avg. Kendall's tau: \", sum(correlation_scores) / len(correlation_scores))"
