--- a/time_fuse_2.ipynb
+++ b/time_fuse_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
     "        if row['docno'] in qid_ranking_dict.get(row['qid'], []):\n",
     "            return row['score'] * _lambda ** 2\n",
     "        else:\n",
-    "            return row['score'] * (1-_lambda) ** 2              \n",
+    "            return row['score'] * (1-_lambda) ** 2           \n",
     "    reranking = run_recent.copy()\n",
     "    \n",
     "    # min max normalization per topic\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|████▎     | 251596/585414 [00:02<00:02, 117883.31it/s]"
+      " 42%|████▏     | 247303/585414 [00:02<00:02, 123534.79it/s]"
      ]
     },
     {
@@ -115,8 +115,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 110903.15it/s]\n",
-      " 43%|████▎     | 252727/585414 [00:02<00:02, 120243.76it/s]"
+      "100%|██████████| 585414/585414 [00:05<00:00, 114778.07it/s]\n",
+      " 43%|████▎     | 251143/585414 [00:02<00:02, 124120.52it/s]"
      ]
     },
     {
@@ -142,8 +142,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 111378.00it/s]\n",
-      " 43%|████▎     | 252282/585414 [00:02<00:02, 119169.18it/s]"
+      "100%|██████████| 585414/585414 [00:05<00:00, 114582.20it/s]\n",
+      " 43%|████▎     | 249833/585414 [00:02<00:02, 119381.31it/s]"
      ]
     },
     {
@@ -169,8 +169,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 111837.19it/s]\n",
-      " 43%|████▎     | 249214/585414 [00:02<00:02, 117778.94it/s]"
+      "100%|██████████| 585414/585414 [00:05<00:00, 114081.36it/s]\n",
+      " 43%|████▎     | 251168/585414 [00:02<00:02, 123765.52it/s]"
      ]
     },
     {
@@ -196,8 +196,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 110670.34it/s]\n",
-      " 43%|████▎     | 251965/585414 [00:02<00:02, 118685.01it/s]"
+      "100%|██████████| 585414/585414 [00:05<00:00, 115305.28it/s]\n",
+      " 44%|████▍     | 257482/585414 [00:02<00:02, 122168.74it/s]"
      ]
     },
     {
@@ -223,8 +223,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 110932.32it/s]\n",
-      " 42%|████▏     | 248125/585414 [00:02<00:03, 104878.04it/s]"
+      "100%|██████████| 585414/585414 [00:05<00:00, 113560.81it/s]\n",
+      " 44%|████▎     | 255895/585414 [00:02<00:02, 118387.75it/s]"
      ]
     },
     {
@@ -250,8 +250,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 110035.99it/s]\n",
-      " 43%|████▎     | 253670/585414 [00:02<00:02, 120901.04it/s]"
+      "100%|██████████| 585414/585414 [00:05<00:00, 114535.22it/s]\n",
+      " 42%|████▏     | 248071/585414 [00:02<00:02, 121581.76it/s]"
      ]
     },
     {
@@ -277,8 +277,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 110705.92it/s]\n",
-      " 43%|████▎     | 253106/585414 [00:02<00:02, 120319.22it/s]"
+      "100%|██████████| 585414/585414 [00:05<00:00, 114866.50it/s]\n",
+      " 43%|████▎     | 252952/585414 [00:02<00:02, 126103.88it/s]"
      ]
     },
     {
@@ -304,8 +304,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 111117.65it/s]\n",
-      " 43%|████▎     | 253221/585414 [00:02<00:02, 121136.06it/s]"
+      "100%|██████████| 585414/585414 [00:04<00:00, 118141.51it/s]\n",
+      " 43%|████▎     | 249526/585414 [00:02<00:02, 124278.15it/s]"
      ]
     },
     {
@@ -331,8 +331,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 112336.47it/s]\n",
-      " 43%|████▎     | 252335/585414 [00:02<00:02, 119197.97it/s]"
+      "100%|██████████| 585414/585414 [00:05<00:00, 116031.93it/s]\n",
+      " 43%|████▎     | 253079/585414 [00:02<00:02, 126240.82it/s]"
      ]
     },
     {
@@ -358,7 +358,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 111763.08it/s]\n"
+      "100%|██████████| 585414/585414 [00:04<00:00, 117219.08it/s]\n"
      ]
     }
    ],
@@ -371,8 +371,10 @@
     "evaluator = pytrec_eval.RelevanceEvaluator(qrels, pytrec_eval.supported_measures)\n",
     "\n",
     "results = {}\n",
-    "for l in np.logspace(-3, -7, num=10):  # sweep from 1e-3 to 1e-12\n",
-    "    _lambda = 0.5 + l\n",
+    "# for l in np.logspace(-3, -6, num=10):  # sweep from 1e-3 to 1e-12\n",
+    "for l in range(1, 11):\n",
+    "    _lambda =  l/10\n",
+    "    # _lambda = 0.5 + l\n",
     "    run_reranked = time_fuse(run_new, run_old, _lambda=_lambda)\n",
     "    results[_lambda] = {}\n",
     "    \n",
@@ -392,28 +394,28 @@
     "    with open(run_reranked_path) as run_reranked:\n",
     "        run = pytrec_eval.parse_run(run_reranked)\n",
     "        scores = evaluator.evaluate(run)\n",
-    "        results[_lambda][\"arp\"] = arp_scores(scores)"
+    "        results[_lambda][\"arp\"] = arp_scores(scores)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| 0.501 | 0.07894661726059203 | 0.16521739130434782 | 0.4369563935417115 | 0.36664537840465017 |\n",
-      "| 0.5003593813663805 | 0.18015837174710114 | 0.1632107023411371 | 0.43696681591301645 | 0.3651031532532713 |\n",
-      "| 0.5001291549665015 | 0.3673963392321741 | 0.16270903010033447 | 0.4370746648615697 | 0.36422704548714674 |\n",
-      "| 0.5000464158883361 | 0.5920213803430702 | 0.16270903010033447 | 0.43733111170037436 | 0.36391700223004286 |\n",
-      "| 0.500016681005372 | 0.7697204337114719 | 0.1623745819397993 | 0.43735522934463766 | 0.3638098161655337 |\n",
-      "| 0.5000059948425032 | 0.8711087893364641 | 0.16237458193979934 | 0.4373071666412955 | 0.36375400554466014 |\n",
-      "| 0.50000215443469 | 0.9201042128690045 | 0.16237458193979934 | 0.43728103787875366 | 0.36375733241888364 |\n",
-      "| 0.5000007742636827 | 0.9414481394214028 | 0.16237458193979934 | 0.43728103787875366 | 0.36375625919355037 |\n",
-      "| 0.5000002782559402 | 0.9499184826743542 | 0.16237458193979934 | 0.43728103787875366 | 0.363756441514514 |\n",
-      "| 0.5000001 | 0.9530700020867431 | 0.16237458193979934 | 0.43728103787875366 | 0.36375643096784677 |\n"
+      "| 0.1 | 0.0061 | 0.1214 | 0.4335 | 0.3139 |\n",
+      "| 0.2 | 0.0061 | 0.1214 | 0.4335 | 0.3139 |\n",
+      "| 0.3 | 0.0061 | 0.1214 | 0.4335 | 0.3139 |\n",
+      "| 0.4 | 0.0059 | 0.1217 | 0.4333 | 0.3153 |\n",
+      "| 0.5 | 1.0 | 0.1624 | 0.4373 | 0.3638 |\n",
+      "| 0.6 | 0.0134 | 0.1157 | 0.4196 | 0.2841 |\n",
+      "| 0.7 | 0.012 | 0.1125 | 0.4194 | 0.2764 |\n",
+      "| 0.8 | 0.0122 | 0.1125 | 0.4194 | 0.2763 |\n",
+      "| 0.9 | 0.0122 | 0.1125 | 0.4194 | 0.2763 |\n",
+      "| 1.0 | 0.0061 | 0.112 | 0.399 | 0.2657 |\n"
      ]
     }
    ],
@@ -421,36 +423,11 @@
     "for l in results.keys():\n",
     "    print(\"|\", \" | \".join([\n",
     "        str(l), \n",
-    "        str(results[l][\"tau\"]), \n",
-    "        str(results[l][\"arp\"][\"P_10\"]), \n",
-    "        str(results[l][\"arp\"][\"bpref\"]), \n",
-    "        str(results[l][\"arp\"][\"ndcg\"])\n",
+    "        str(round(results[l][\"tau\"], 4)), \n",
+    "        str(round(results[l][\"arp\"][\"P_10\"], 4)), \n",
+    "        str(round(results[l][\"arp\"][\"bpref\"], 4)), \n",
+    "        str(round(results[l][\"arp\"][\"ndcg\"], 4))\n",
     "        ]), \"|\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.1623745819397993\n",
-      "0.43728103787875366\n",
-      "0.36375525364044387\n"
-     ]
-    }
-   ],
-   "source": [
-    "# raw ranking\n",
-    "with open(os.path.join(base_path, runs_path, run_new_path)) as run_new:\n",
-    "    run = pytrec_eval.parse_run(run_new)\n",
-    "    scores = evaluator.evaluate(run)\n",
-    "    print(arp_scores(scores)[\"P_10\"])\n",
-    "    print(arp_scores(scores)[\"bpref\"])\n",
-    "    print(arp_scores(scores)[\"ndcg\"])"
    ]
   },
   {
@@ -462,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -612,9 +589,9 @@
      "output_type": "stream",
      "text": [
       "Avg. Kendall's tau:  0.004242197558995947\n",
-      "0.4218068440668467\n",
-      "0.10619765494137354\n",
-      "0.29136889967380725\n"
+      "0.4218\n",
+      "0.1062\n",
+      "0.2914\n"
      ]
     }
    ],
@@ -629,9 +606,9 @@
     "with open(run_reranked_path) as run_reranked:\n",
     "    run = pytrec_eval.parse_run(run_reranked)\n",
     "    scores = evaluator.evaluate(run)\n",
-    "    print(arp_scores(scores)[\"bpref\"])\n",
-    "    print(arp_scores(scores)[\"P_10\"])\n",
-    "    print(arp_scores(scores)[\"ndcg\"])"
+    "    print(round(arp_scores(scores)[\"bpref\"], 4))\n",
+    "    print(round(arp_scores(scores)[\"P_10\"], 4))\n",
+    "    print(round(arp_scores(scores)[\"ndcg\"], 4))"
    ]
   },
   {
