--- a/time_fuse_2.ipynb
+++ b/time_fuse_2.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,7 @@
     "    \n",
     "    def weigh(row):\n",
     "        if not qid_ranking_dict.get(row['qid']):\n",
+    "            # These topics will be boosted down, an empty set is returned \n",
     "            print(\"Could not find\", row['qid'])\n",
     "            \n",
     "        if row['docno'] in qid_ranking_dict.get(row['qid'], []):\n",
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,14 +83,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1e-10\n",
+      "1e-09\n",
+      "1e-08\n",
+      "1e-07\n",
+      "1e-06\n",
+      "1e-05\n",
+      "0.0001\n",
+      "0.001\n",
+      "0.01\n",
+      "0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in np.logspace(-10, -1, num=10):\n",
+    "    print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.01\n",
+      "0.02\n",
+      "0.03\n",
+      "0.04\n",
+      "0.05\n",
+      "0.06\n",
+      "0.07\n",
+      "0.08\n",
+      "0.09\n",
+      "0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in range(1, 11):\n",
+    "    print(l/100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 42%|████▏     | 247303/585414 [00:02<00:02, 123534.79it/s]"
+      " 42%|████▏     | 247900/585414 [00:02<00:02, 122700.51it/s]"
      ]
     },
     {
@@ -115,8 +170,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 114778.07it/s]\n",
-      " 43%|████▎     | 251143/585414 [00:02<00:02, 124120.52it/s]"
+      "100%|██████████| 585414/585414 [00:05<00:00, 116434.33it/s]\n",
+      " 42%|████▏     | 247979/585414 [00:02<00:02, 122008.31it/s]"
      ]
     },
     {
@@ -142,8 +197,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 114582.20it/s]\n",
-      " 43%|████▎     | 249833/585414 [00:02<00:02, 119381.31it/s]"
+      "100%|██████████| 585414/585414 [00:05<00:00, 115827.35it/s]\n",
+      " 42%|████▏     | 248407/585414 [00:02<00:02, 123277.50it/s]"
      ]
     },
     {
@@ -169,8 +224,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 114081.36it/s]\n",
-      " 43%|████▎     | 251168/585414 [00:02<00:02, 123765.52it/s]"
+      "100%|██████████| 585414/585414 [00:05<00:00, 116710.14it/s]\n",
+      " 42%|████▏     | 247781/585414 [00:02<00:02, 122709.43it/s]"
      ]
     },
     {
@@ -196,8 +251,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 115305.28it/s]\n",
-      " 44%|████▍     | 257482/585414 [00:02<00:02, 122168.74it/s]"
+      "100%|██████████| 585414/585414 [00:05<00:00, 116542.81it/s]\n",
+      " 42%|████▏     | 247447/585414 [00:02<00:02, 121831.12it/s]"
      ]
     },
     {
@@ -223,8 +278,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 113560.81it/s]\n",
-      " 44%|████▎     | 255895/585414 [00:02<00:02, 118387.75it/s]"
+      "100%|██████████| 585414/585414 [00:05<00:00, 115840.96it/s]\n",
+      " 42%|████▏     | 247024/585414 [00:02<00:02, 122155.31it/s]"
      ]
     },
     {
@@ -250,8 +305,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 114535.22it/s]\n",
-      " 42%|████▏     | 248071/585414 [00:02<00:02, 121581.76it/s]"
+      "100%|██████████| 585414/585414 [00:05<00:00, 115875.17it/s]\n",
+      " 43%|████▎     | 249339/585414 [00:02<00:02, 123832.79it/s]"
      ]
     },
     {
@@ -277,8 +332,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 114866.50it/s]\n",
-      " 43%|████▎     | 252952/585414 [00:02<00:02, 126103.88it/s]"
+      "100%|██████████| 585414/585414 [00:04<00:00, 117172.58it/s]\n",
+      " 43%|████▎     | 251273/585414 [00:02<00:02, 124366.58it/s]"
      ]
     },
     {
@@ -304,8 +359,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:04<00:00, 118141.51it/s]\n",
-      " 43%|████▎     | 249526/585414 [00:02<00:02, 124278.15it/s]"
+      "100%|██████████| 585414/585414 [00:04<00:00, 117675.01it/s]\n",
+      " 43%|████▎     | 250602/585414 [00:02<00:02, 124099.68it/s]"
      ]
     },
     {
@@ -331,34 +386,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 116031.93it/s]\n",
-      " 43%|████▎     | 253079/585414 [00:02<00:02, 126240.82it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Could not find q012351539607713\n",
-      "Could not find q012351539607713\n",
-      "Could not find q012351539607713\n",
-      "Could not find q012351539607713\n",
-      "Could not find q012351539607713\n",
-      "Could not find q012351539607713\n",
-      "Could not find q012351539607713\n",
-      "Could not find q012351539607713\n",
-      "Could not find q012351539607713\n",
-      "Could not find q012351539607713\n",
-      "Could not find q012351539607713\n",
-      "Could not find q012351539607713\n",
-      "Could not find q012351539607713\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 585414/585414 [00:04<00:00, 117219.08it/s]\n"
+      "100%|██████████| 585414/585414 [00:04<00:00, 117525.35it/s]\n"
      ]
     }
    ],
@@ -371,10 +399,13 @@
     "evaluator = pytrec_eval.RelevanceEvaluator(qrels, pytrec_eval.supported_measures)\n",
     "\n",
     "results = {}\n",
-    "# for l in np.logspace(-3, -6, num=10):  # sweep from 1e-3 to 1e-12\n",
-    "for l in range(1, 11):\n",
-    "    _lambda =  l/10\n",
-    "    # _lambda = 0.5 + l\n",
+    "# for l in np.logspace(-4, -6, num=10):\n",
+    "# for l in np.logspace(1e-3, 1e-12 num=10):  # sweep from 1e-3 to 1e-12\n",
+    "# for l in np.logspace(-10, -1, num=10):\n",
+    "# for l in range(1, 11):\n",
+    "#     l =  l/100\n",
+    "for l in [0.001, 0.002, 0.003, 0.004, 0.005, 0.006, 0.007, 0.008, 0.009]:\n",
+    "    _lambda = 0.6 + l\n",
     "    run_reranked = time_fuse(run_new, run_old, _lambda=_lambda)\n",
     "    results[_lambda] = {}\n",
     "    \n",
@@ -399,23 +430,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| 0.1 | 0.0061 | 0.1214 | 0.4335 | 0.3139 |\n",
-      "| 0.2 | 0.0061 | 0.1214 | 0.4335 | 0.3139 |\n",
-      "| 0.3 | 0.0061 | 0.1214 | 0.4335 | 0.3139 |\n",
-      "| 0.4 | 0.0059 | 0.1217 | 0.4333 | 0.3153 |\n",
-      "| 0.5 | 1.0 | 0.1624 | 0.4373 | 0.3638 |\n",
-      "| 0.6 | 0.0134 | 0.1157 | 0.4196 | 0.2841 |\n",
-      "| 0.7 | 0.012 | 0.1125 | 0.4194 | 0.2764 |\n",
-      "| 0.8 | 0.0122 | 0.1125 | 0.4194 | 0.2763 |\n",
-      "| 0.9 | 0.0122 | 0.1125 | 0.4194 | 0.2763 |\n",
-      "| 1.0 | 0.0061 | 0.112 | 0.399 | 0.2657 |\n"
+      "| 0.601 | 0.0133 | 0.1156 | 0.4196 | 0.2839 |\n",
+      "| 0.602 | 0.0131 | 0.1156 | 0.4196 | 0.2836 |\n",
+      "| 0.603 | 0.0129 | 0.1156 | 0.4195 | 0.2833 |\n",
+      "| 0.604 | 0.013 | 0.1156 | 0.4194 | 0.2831 |\n",
+      "| 0.605 | 0.0123 | 0.1154 | 0.4193 | 0.2828 |\n",
+      "| 0.606 | 0.0126 | 0.1152 | 0.4193 | 0.2826 |\n",
+      "| 0.607 | 0.0129 | 0.1152 | 0.4192 | 0.2823 |\n",
+      "| 0.608 | 0.0128 | 0.1149 | 0.4192 | 0.2821 |\n",
+      "| 0.609 | 0.0129 | 0.1149 | 0.4192 | 0.2819 |\n"
      ]
     }
    ],
@@ -439,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,76 +522,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
     "run_new = pt.io.read_results(os.path.join(base_path, runs_path, run_new_path))\n",
     "\n",
-    "old_runs = []\n",
-    "for name in os.listdir(os.path.join(base_path, runs_path)):\n",
-    "    if \"T-t3\" in name and name.endswith(\"extended\"):\n",
-    "        run = pt.io.read_results(os.path.join(base_path, runs_path, name))\n",
-    "        old_runs.append(run)"
+    "# Load history of runs\n",
+    "def load_history_runs(history, sub_collection):\n",
+    "    history_index = [\"D-\"+i for i in history]\n",
+    "    old_runs = []\n",
+    "    for name in os.listdir(os.path.join(base_path, runs_path)):\n",
+    "        if sub_collection in name and name.endswith(\"extended\"):\n",
+    "            for i in history_index:\n",
+    "                if i in name:\n",
+    "                    run = pt.io.read_results(os.path.join(base_path, runs_path, name))\n",
+    "                    old_runs.append(run)\n",
+    "    return old_runs\n",
+    "\n",
+    "\n",
+    "# find core qids\n",
+    "def core_topics(run_new, old_runs):\n",
+    "    topic_sets = []\n",
+    "    for i in old_runs:\n",
+    "        topic_sets.append(set(i[\"qid\"]))\n",
+    "    topic_sets.append(set(run_new[\"qid\"]))\n",
+    "\n",
+    "    core_topics = set.intersection(*topic_sets)\n",
+    "    print(\"Found known documents for:\", len(core_topics), \"of\", len(run_new[\"qid\"].unique()), \"topics\")\n",
+    "    return core_topics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "597\n"
+      "Found known documents for: 597 of 598 topics\n"
      ]
     }
    ],
    "source": [
-    "# find core qids\n",
-    "topic_sets = []\n",
-    "for i in old_runs:\n",
-    "    topic_sets.append(set(i[\"qid\"]))\n",
-    "topic_sets.append(set(run_new[\"qid\"]))\n",
+    "history = [\"t2\"]\n",
+    "old_runs = load_history_runs(history, \"t3\")\n",
+    "core_topics = core_topics(run_new, old_runs)\n",
     "\n",
-    "core = set.intersection(*topic_sets)\n",
-    "print(len(core))"
+    "missing_topics = set(run_new[\"qid\"]) - set(core_topics)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
     "old_runs_cleaned = []\n",
     "for run in old_runs:\n",
-    "    old_runs_cleaned.append(run[run[\"qid\"].isin(core)])\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    old_runs_cleaned.append(run[run[\"qid\"].isin(core_topics)])\n",
     "old_runs = old_runs_cleaned"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_new_cleaned = run_new[run_new[\"qid\"].isin(core)]"
+    "run_new_cleaned = run_new[run_new[\"qid\"].isin(core_topics)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,28 +606,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_name = f'CIR_BM25_D-t3_T-t3_rr-ff'\n",
+    "run_name = f'CIR_BM25_D-t3_T-t3_rr-ff{\"\".join(history)}'\n",
     "run_reranked_path = os.path.join(base_path, reranked_path, run_name)\n",
     "run_reranked.save(run_reranked_path,  kind='trec')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add missing topic back to run\n",
+    "missing_topic_ranking = run_new[run_new[\"qid\"].isin(missing_topics)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reranked_run = pd.read_csv(run_reranked_path, sep=\" \", names=[\"qid\", \"Q0\", \"docno\", \"rank\", \"score\", \"name\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/pz/f66p4s0s11z2c1c1l3v0qbh40000gn/T/ipykernel_2937/3703733993.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  missing_topic_ranking[\"Q0\"] = \"Q0\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_topic_ranking[\"Q0\"] = \"Q0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat([reranked_run, missing_topic_ranking], ignore_index=True).to_csv(run_reranked_path, sep=\" \", header=None, index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Avg. Kendall's tau:  0.004242197558995947\n",
-      "0.4218\n",
-      "0.1062\n",
-      "0.2914\n"
+      "| 0.00873296943962716 | t2 | 0.1117 | 0.4263 | 0.305 |\n"
      ]
     }
    ],
@@ -601,14 +684,84 @@
     "correlations = rpd_eval.ktau_union().get('baseline')\n",
     "correlation_scores = [x for x in list(correlations.values()) if ~np.isnan(x)]\n",
     "\n",
-    "print(\"Avg. Kendall's tau: \", sum(correlation_scores) / len(correlation_scores))\n",
+    "avg_tau =  sum(correlation_scores) / len(correlation_scores)\n",
     "\n",
     "with open(run_reranked_path) as run_reranked:\n",
     "    run = pytrec_eval.parse_run(run_reranked)\n",
     "    scores = evaluator.evaluate(run)\n",
-    "    print(round(arp_scores(scores)[\"bpref\"], 4))\n",
-    "    print(round(arp_scores(scores)[\"P_10\"], 4))\n",
-    "    print(round(arp_scores(scores)[\"ndcg\"], 4))"
+    "    print( \"|\", \n",
+    "          str(avg_tau), \"|\",\n",
+    "          \", \".join(history), \"|\",\n",
+    "        str(round(arp_scores(scores)[\"P_10\"], 4)), \"|\",\n",
+    "        str(round(arp_scores(scores)[\"bpref\"], 4)), \"|\",\n",
+    "        str(round(arp_scores(scores)[\"ndcg\"], 4)), \"|\"\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| 0.005752406303693579 | t2, t1 | 0.0987 | 0.4163 | 0.2825 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "rpd_eval = RpdEvaluator(run_b_orig_path=os.path.join(base_path, runs_path, run_new_path), run_b_rep_path=run_reranked_path)\n",
+    "\n",
+    "correlations = rpd_eval.ktau_union().get('baseline')\n",
+    "correlation_scores = [x for x in list(correlations.values()) if ~np.isnan(x)]\n",
+    "\n",
+    "avg_tau =  sum(correlation_scores) / len(correlation_scores)\n",
+    "\n",
+    "with open(run_reranked_path) as run_reranked:\n",
+    "    run = pytrec_eval.parse_run(run_reranked)\n",
+    "    scores = evaluator.evaluate(run)\n",
+    "    print( \"|\", \n",
+    "          str(avg_tau), \"|\",\n",
+    "          \", \".join(history), \"|\",\n",
+    "        str(round(arp_scores(scores)[\"P_10\"], 4)), \"|\",\n",
+    "        str(round(arp_scores(scores)[\"bpref\"], 4)), \"|\",\n",
+    "        str(round(arp_scores(scores)[\"ndcg\"], 4)), \"|\"\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| 0.00580605559250212 | t2, t1, t0 | 0.1007 | 0.4178 | 0.2758 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "rpd_eval = RpdEvaluator(run_b_orig_path=os.path.join(base_path, runs_path, run_new_path), run_b_rep_path=run_reranked_path)\n",
+    "\n",
+    "correlations = rpd_eval.ktau_union().get('baseline')\n",
+    "correlation_scores = [x for x in list(correlations.values()) if ~np.isnan(x)]\n",
+    "\n",
+    "avg_tau =  sum(correlation_scores) / len(correlation_scores)\n",
+    "\n",
+    "with open(run_reranked_path) as run_reranked:\n",
+    "    run = pytrec_eval.parse_run(run_reranked)\n",
+    "    scores = evaluator.evaluate(run)\n",
+    "    print( \"|\", \n",
+    "          str(avg_tau), \"|\",\n",
+    "          \", \".join(history), \"|\",\n",
+    "        str(round(arp_scores(scores)[\"P_10\"], 4)), \"|\",\n",
+    "        str(round(arp_scores(scores)[\"bpref\"], 4)), \"|\",\n",
+    "        str(round(arp_scores(scores)[\"ndcg\"], 4)), \"|\"\n",
+    "        )"
    ]
   },
   {
