fix score in qrel boost system and add parameter for graded relevance boost

--- a/filter_not_rel.ipynb
+++ b/filter_not_rel.ipynb
@@ -32,7 +32,7 @@
     "from repro_eval.util import arp, arp_scores\n",
     "\n",
     "if not pt.started():\n",
-    "    pt.init()"
+    "    pt.init(boot_packages=[\"com.github.terrierteam:terrier-prf:-SNAPSHOT\"])"
    ]
   },
   {
