add relevance feedback system

--- a/time_fuse_2.ipynb
+++ b/time_fuse_2.ipynb
@@ -15,7 +15,7 @@
     "import pytrec_eval\n",
     "import yaml\n",
     "if not pt.started():\n",
-    "    pt.init()"
+    "    pt.init(boot_packages=[\"com.github.terrierteam:terrier-prf:-SNAPSHOT\"])"
    ]
   },
   {
