add time boost notebook

--- a/time_fuse_2.ipynb
+++ b/time_fuse_2.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jueri/dev/CLEF2024-LongEval-CIR/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "PyTerrier 0.10.1 has loaded Terrier 5.9 (built by craigm on 2024-05-02 17:40) and terrier-helper 0.0.8\n",
+      "\n",
+      "No etc/terrier.properties, using terrier.default.properties for bootstrap configuration.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import pyterrier as pt\n",
@@ -28,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +86,8 @@
     "runs_path = \"results/trec\"\n",
     "reranked_path = \"results/fuse_time\"\n",
     "\n",
-    "run_new_path = \"CIR_BM25_D-t3_T-t3\"\n",
-    "run_old_path = \"CIR_BM25_D-t2_T-t3_extended\"\n",
+    "run_new_path = \"CIR_BM25_D-t5_T-t5\"\n",
+    "run_old_path = \"CIR_BM25_D-t4_T-t5_extended\"\n",
     "\n",
     "with open(\"data/LongEval/metadata.yml\", \"r\") as yamlfile:\n",
     "    config = yaml.load(yamlfile, Loader=yaml.FullLoader)"
@@ -83,68 +95,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  7%|▋         | 95953/1463631 [00:04<01:04, 21340.93it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1e-10\n",
-      "1e-09\n",
-      "1e-08\n",
-      "1e-07\n",
-      "1e-06\n",
-      "1e-05\n",
-      "0.0001\n",
-      "0.001\n",
-      "0.01\n",
-      "0.1\n"
+      "Could not find q08231859\n",
+      "Could not find q08231859\n",
+      "Could not find q08231859\n",
+      "Could not find q08231859\n",
+      "Could not find q08231859\n",
+      "Could not find q08231859\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 15%|█▍        | 214174/1463631 [00:10<01:07, 18423.32it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Could not find q08234008\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1463631/1463631 [01:12<00:00, 20317.92it/s]\n"
      ]
     }
    ],
    "source": [
-    "for l in np.logspace(-10, -1, num=10):\n",
-    "    print(l)"
+    "run_new = pt.io.read_results(os.path.join(base_path, runs_path, run_new_path))\n",
+    "run_old = pt.io.read_results(os.path.join(base_path, runs_path, run_old_path))\n",
+    "\n",
+    "_lambda = 0.503\n",
+    "run_reranked = time_fuse(run_new, run_old, _lambda=_lambda)\n",
+    "run_name = run_new_path + f'_ft-{_lambda}'\n",
+    "pt.io.write_results(run_reranked, os.path.join(base_path, reranked_path, run_name), format='trec', run_name=run_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.01\n",
-      "0.02\n",
-      "0.03\n",
-      "0.04\n",
-      "0.05\n",
-      "0.06\n",
-      "0.07\n",
-      "0.08\n",
-      "0.09\n",
-      "0.1\n"
-     ]
-    }
-   ],
-   "source": [
-    "for l in range(1, 11):\n",
-    "    print(l/100)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 42%|████▏     | 247900/585414 [00:02<00:02, 122700.51it/s]"
+      " 40%|████      | 236794/585414 [00:09<00:14, 24754.05it/s]"
      ]
     },
     {
@@ -170,8 +191,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 116434.33it/s]\n",
-      " 42%|████▏     | 247979/585414 [00:02<00:02, 122008.31it/s]"
+      "100%|██████████| 585414/585414 [00:23<00:00, 24639.50it/s]\n",
+      " 41%|████      | 237381/585414 [00:10<00:12, 28419.31it/s]"
      ]
     },
     {
@@ -197,8 +218,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 115827.35it/s]\n",
-      " 42%|████▏     | 248407/585414 [00:02<00:02, 123277.50it/s]"
+      "100%|██████████| 585414/585414 [00:25<00:00, 22622.98it/s]\n",
+      " 40%|████      | 236349/585414 [00:08<00:11, 30692.68it/s]"
      ]
     },
     {
@@ -224,8 +245,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 116710.14it/s]\n",
-      " 42%|████▏     | 247781/585414 [00:02<00:02, 122709.43it/s]"
+      "100%|██████████| 585414/585414 [00:21<00:00, 26788.12it/s]\n",
+      " 40%|████      | 237026/585414 [00:09<00:12, 28277.98it/s]"
      ]
     },
     {
@@ -251,8 +272,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 116542.81it/s]\n",
-      " 42%|████▏     | 247447/585414 [00:02<00:02, 121831.12it/s]"
+      "100%|██████████| 585414/585414 [00:22<00:00, 25923.37it/s]\n",
+      " 41%|████      | 238275/585414 [00:08<00:11, 30236.44it/s]"
      ]
     },
     {
@@ -278,8 +299,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 115840.96it/s]\n",
-      " 42%|████▏     | 247024/585414 [00:02<00:02, 122155.31it/s]"
+      "100%|██████████| 585414/585414 [00:22<00:00, 26228.18it/s]\n",
+      " 40%|████      | 236067/585414 [00:08<00:12, 29018.18it/s]"
      ]
     },
     {
@@ -305,8 +326,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:05<00:00, 115875.17it/s]\n",
-      " 43%|████▎     | 249339/585414 [00:02<00:02, 123832.79it/s]"
+      "100%|██████████| 585414/585414 [00:22<00:00, 26326.50it/s]\n",
+      " 41%|████      | 238342/585414 [00:09<00:11, 31247.35it/s]"
      ]
     },
     {
@@ -332,8 +353,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:04<00:00, 117172.58it/s]\n",
-      " 43%|████▎     | 251273/585414 [00:02<00:02, 124366.58it/s]"
+      "100%|██████████| 585414/585414 [00:22<00:00, 26278.73it/s]\n",
+      " 41%|████      | 237105/585414 [00:08<00:11, 30122.97it/s]"
      ]
     },
     {
@@ -359,8 +380,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:04<00:00, 117675.01it/s]\n",
-      " 43%|████▎     | 250602/585414 [00:02<00:02, 124099.68it/s]"
+      "100%|██████████| 585414/585414 [00:22<00:00, 25508.88it/s]\n",
+      " 40%|████      | 237041/585414 [00:09<00:11, 29494.05it/s]"
      ]
     },
     {
@@ -386,7 +407,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 585414/585414 [00:04<00:00, 117525.35it/s]\n"
+      "100%|██████████| 585414/585414 [00:22<00:00, 26183.46it/s]\n"
      ]
     }
    ],
@@ -405,7 +426,7 @@
     "# for l in range(1, 11):\n",
     "#     l =  l/100\n",
     "for l in [0.001, 0.002, 0.003, 0.004, 0.005, 0.006, 0.007, 0.008, 0.009]:\n",
-    "    _lambda = 0.6 + l\n",
+    "    _lambda = 0.5 + l\n",
     "    run_reranked = time_fuse(run_new, run_old, _lambda=_lambda)\n",
     "    results[_lambda] = {}\n",
     "    \n",
@@ -430,22 +451,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| 0.601 | 0.0133 | 0.1156 | 0.4196 | 0.2839 |\n",
-      "| 0.602 | 0.0131 | 0.1156 | 0.4196 | 0.2836 |\n",
-      "| 0.603 | 0.0129 | 0.1156 | 0.4195 | 0.2833 |\n",
-      "| 0.604 | 0.013 | 0.1156 | 0.4194 | 0.2831 |\n",
-      "| 0.605 | 0.0123 | 0.1154 | 0.4193 | 0.2828 |\n",
-      "| 0.606 | 0.0126 | 0.1152 | 0.4193 | 0.2826 |\n",
-      "| 0.607 | 0.0129 | 0.1152 | 0.4192 | 0.2823 |\n",
-      "| 0.608 | 0.0128 | 0.1149 | 0.4192 | 0.2821 |\n",
-      "| 0.609 | 0.0129 | 0.1149 | 0.4192 | 0.2819 |\n"
+      "| 0.501 | 0.0789 | 0.1652 | 0.437 | 0.3666 |\n",
+      "| 0.502 | 0.0452 | 0.1694 | 0.4361 | 0.3677 |\n",
+      "| 0.503 | 0.0348 | 0.1722 | 0.4367 | 0.3686 |\n",
+      "| 0.504 | 0.031 | 0.1717 | 0.436 | 0.3691 |\n",
+      "| 0.505 | 0.0278 | 0.1712 | 0.4348 | 0.3694 |\n",
+      "| 0.506 | 0.0237 | 0.1721 | 0.435 | 0.3694 |\n",
+      "| 0.507 | 0.0223 | 0.1722 | 0.4342 | 0.3675 |\n",
+      "| 0.508 | 0.0213 | 0.1741 | 0.4346 | 0.3665 |\n",
+      "| 0.509 | 0.0205 | 0.1751 | 0.4332 | 0.3657 |\n"
      ]
     }
    ],
@@ -758,6 +779,32 @@
     "    print( \"|\", \n",
     "          str(avg_tau), \"|\",\n",
     "          \", \".join(history), \"|\",\n",
+    "        str(round(arp_scores(scores)[\"P_10\"], 4)), \"|\",\n",
+    "        str(round(arp_scores(scores)[\"bpref\"], 4)), \"|\",\n",
+    "        str(round(arp_scores(scores)[\"ndcg\"], 4)), \"|\"\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| 0.1776 | 0.4571 | 0.3839 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "with open(\"/Users/jueri/dev/CLEF2024-LongEval-CIR/data/results/BM25+monoT5/CIR_BM25+monoT5_D-t3_T-t3\") as run_reranked:\n",
+    "    run = pytrec_eval.parse_run(run_reranked)\n",
+    "    scores = evaluator.evaluate(run)\n",
+    "    print( \"|\", \n",
     "        str(round(arp_scores(scores)[\"P_10\"], 4)), \"|\",\n",
     "        str(round(arp_scores(scores)[\"bpref\"], 4)), \"|\",\n",
     "        str(round(arp_scores(scores)[\"ndcg\"], 4)), \"|\"\n",
