--- a/relevance_feedback.ipynb
+++ b/relevance_feedback.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jueri/dev/CLEF2024-LongEval-CIR/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "PyTerrier 0.10.1 has loaded Terrier 5.9 (built by craigm on 2024-05-02 17:40) and terrier-helper 0.0.8\n",
+      "\n",
+      "No etc/terrier.properties, using terrier.default.properties for bootstrap configuration.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import pyterrier as pt\n",
@@ -25,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -502,6 +514,9 @@
    ],
    "source": [
     "history = [\"t2\", \"t1\", \"t0\"]\n",
+    "nterms = 20\n",
+    "\n",
+    "filename = f\"/CIR_BM25_D-t3_T-t3_rrrf{\"\".join(history)}-k{nterms}\"\n",
     "\n",
     "# get query_map\n",
     "query = \"\"\"SELECT topic.queryid as qid_1, T2.queryid as qid_2 from topic\n",
@@ -540,7 +555,7 @@
     "        new_topics.append(topic[\"qid\"])\n",
     "        print(\"No relevant docs found\", topic[\"qid\"], topic[\"query\"])\n",
     "        continue\n",
-    "    extension_terms = [item[0] for item in extract_top_terms(texts)]\n",
+    "    extension_terms = [item[0] for item in extract_top_terms(texts, top_n=nterms)]\n",
     "    extension_terms = \" \".join(extension_terms)\n",
     "    new_topic[\"query\"] = new_topic[\"query\"] + \" \" + extension_terms\n",
     "    \n",
@@ -550,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,16 +583,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "BR(BM25): 100%|██████████| 193/193 [02:28<00:00,  1.30q/s]\n",
-      "BR(BM25): 100%|██████████| 406/406 [04:00<00:00,  1.69q/s]\n",
-      "BR(BM25): 100%|██████████| 405/405 [04:36<00:00,  1.47q/s]\n"
+      "BR(BM25): 100%|██████████| 193/193 [03:18<00:00,  1.03s/q]\n",
+      "BR(BM25): 100%|██████████| 406/406 [04:08<00:00,  1.63q/s]\n",
+      "BR(BM25): 100%|██████████| 405/405 [04:38<00:00,  1.45q/s]\n"
      ]
     }
    ],
@@ -592,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,16 +616,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'filename' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m pt\u001b[38;5;241m.\u001b[39mio\u001b[38;5;241m.\u001b[39mwrite_results(merged_run, os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(results_path, \u001b[43mfilename\u001b[49m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'filename' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "pt.io.write_results(merged_run, results_path + f\"/CIR_BM25_D-t3_T-t3_rrrf{\"\".join(history)}\")"
+    "pt.io.write_results(merged_run, os.path.join(results_path, filename))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -622,17 +649,19 @@
     }
    ],
    "source": [
+    "# Relevance Feedback old\n",
     "base_path = \"data\"\n",
     "with open(os.path.join(base_path, config[\"subcollections\"][\"t3\"][\"qrels\"][\"test\"]), \"r\") as f_qrels:\n",
     "    qrels = pytrec_eval.parse_qrel(f_qrels)\n",
     "    \n",
     "evaluator = pytrec_eval.RelevanceEvaluator(qrels, pytrec_eval.supported_measures)\n",
     "\n",
-    "with open(results_path + f\"/CIR_BM25_D-t3_T-t3_rrrf{\"\".join(history)}\") as run_reranked:\n",
+    "with open(os.path.join(results_path, filename)) as run_reranked:\n",
     "    run = pytrec_eval.parse_run(run_reranked)\n",
     "    scores = evaluator.evaluate(run)\n",
     "    print( \"|\", \n",
     "          \", \".join(history), \"|\",\n",
+    "          \", \"+str(nterms), \"|\",\n",
     "        str(round(arp_scores(scores)[\"P_10\"], 4)), \"|\",\n",
     "        str(round(arp_scores(scores)[\"bpref\"], 4)), \"|\",\n",
     "        str(round(arp_scores(scores)[\"ndcg\"], 4)), \"|\"\n",
@@ -662,7 +691,34 @@
     }
    ],
    "source": [
+    "# MonoT5\n",
     "with open(\"CIR_BM25+monoT5_D-t3_T-t3\") as run_reranked:\n",
+    "    run = pytrec_eval.parse_run(run_reranked)\n",
+    "    scores = evaluator.evaluate(run)\n",
+    "    print( \"|\", \n",
+    "          \", \".join(history), \"|\",\n",
+    "        str(round(arp_scores(scores)[\"P_10\"], 4)), \"|\",\n",
+    "        str(round(arp_scores(scores)[\"bpref\"], 4)), \"|\",\n",
+    "        str(round(arp_scores(scores)[\"ndcg\"], 4)), \"|\"\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| t2, t1, t0 | 0.1758 | 0.4819 | 0.3955 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "# RF new\n",
+    "with open(results_path + f\"CIR_BM25_D-t3_T-t3_rf{\"\".join(history)}\") as run_reranked:\n",
     "    run = pytrec_eval.parse_run(run_reranked)\n",
     "    scores = evaluator.evaluate(run)\n",
     "    print( \"|\", \n",
@@ -697,7 +753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
